# geoapi

./: pom.xml
geoapi/: pom.xml
geoapi-conformance/: pom.xml
geoapi-examples/: pom.xml
geoapi-gdal/: pom.xml
geoapi-java-python/: README.md  pom.xml  pyproject.toml
geoapi-java-python/src/main/java/: module-info.java
geoapi-java-python/src/main/java/org/opengis/bridge/python/: CPython.java  CharSequences.java  Configuration.java  Converter.java  Environment.java  Interfacing.java  Literal.java  PyObject.java  PythonException.java  Sequence.java  Singleton.java  Wrapper.java  package-info.java
geoapi-java-python/src/main/python/opengis/bridge/: __init__.py
geoapi-java-python/src/main/python/opengis/bridge/java/: __init__.py  metadata.py  referencing.py
geoapi-java-python/src/main/resources/org/opengis/bridge/python/: subclassed.txt
geoapi-java-python/src/test/java/org/opengis/bridge/python/: InterfacingTest.java  PythonBridgeHelper.java  PythonBridgeHelperTest.java  PythonHelper.java
geoapi-java-python/src/test/python/: test_referencing.py
geoapi-java-python/src/test/python/tests/: __init__.py  test_metadata_binding.py  test_referencing.py
geoapi-netcdf/: pom.xml
geoapi-netcdf/src/site/apt/: index.apt
geoapi-openoffice/: pom.xml
geoapi-openoffice/src/site/apt/: build.apt  replace.apt
geoapi-pending/: pom.xml
geoapi-pending/src/main/java/: module-info.java
geoapi-proj4/: pom.xml
geoapi-proj4/src/site/apt/: index.apt
geoapi/src/main/python/opengis/: __init__.py
geoapi/src/main/python/opengis/geometry/: __init__.py  primitive.py
geoapi/src/main/python/opengis/metadata/: __init__.py  acquisition.py  base.py  citation.py  constraints.py  content.py  distribution.py  extension.py  extent.py  identification.py  (+6 more)
geoapi/src/main/sphinx/: conf.py
geoapi/src/site/: site.xml
geoapi/src/test/python/: test_metadata.py
src/main/python/: build.py  setup.py
src/site/apt/: maven.apt
src/site/sphinx/: conf.py
tools/: README.md  pom.xml
tools/src/main/java/: module-info.java
tools/src/main/shell/: setenv.sh
tools/src/site/apt/: index.apt  release-instruction.apt
(+187 files in other folders)
